corrected mobile spacing

--- a/src/Courses.css
+++ b/src/Courses.css
@@ -111,8 +111,8 @@ width: 25%;
       background-color: rgb(0, 0, 0);
       min-width: 0px;
       height: 100px;
-      padding-left: 30px;
-      padding-right: 30px;
+      padding-left: 10px;
+      padding-right: 10px;
       line-height: 12px;
       display: flex;
       justify-content: space-between;
@@ -129,6 +129,7 @@ width: 25%;
     
     .TitleInstructor {
       width: 50%;
+      line-height: 16px;
     }
     
     .DistWriting {
@@ -136,7 +137,8 @@ width: 25%;
     }
     
     .DaysTimes {
-      width: 30%;
+      width: 20%;
+      line-height: 16px;
     }
   
   }
